# Agentic-OS

./: AGENTIC_OS_SUMMARY.md  AgenticOS_Architecture.md  CMakeLists.txt  ENHANCED_FEATURES_SUMMARY.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  generate_additional_files.sh  generate_comprehensive_files.py  generate_comprehensive_system.py  generate_files.sh  requirements.txt  research_findings.md  setup.py
agentic_os/: README.md  __init__.py  demo.py  main.py
agentic_os/agents/: __init__.py  agent_manager.py  base_agent.py  dropshipping_agent.py  monitor_agent.py
agentic_os/api/: __init__.py  server.py
agentic_os/business_modules/: __init__.py  business_manager.py  dropshipping_business.py
agentic_os/core/: __init__.py  logger.py  os_controller.py  the_wire.py  wire_demo.py
agentic_os/database/: __init__.py  db_manager.py
agentic_os/monitoring/: __init__.py  monitor.py
bootloader/: uefi_main.cpp
bootloader/backup/: backup_header_11.h  backup_header_12.h  backup_header_15.h  backup_header_20.h  backup_header_21.h  backup_header_24.h  backup_header_3.h  backup_header_5.h  backup_header_8.h  backup_impl_10.cpp  backup_impl_15.cpp  backup_impl_18.cpp  backup_impl_21.cpp  backup_impl_24.cpp  backup_impl_5.cpp  backup_impl_7.cpp  backup_impl_8.cpp  backup_impl_9.cpp  backup_interface_1.h  backup_interface_10.h  backup_interface_13.h  backup_interface_20.h  backup_interface_24.h  backup_interface_6.h  backup_interface_7.h  backup_utility_14.h  backup_utility_21.h  backup_utility_22.h  backup_utility_23.h  backup_utility_24.h
bootloader/cache/: cache_header_1.h  cache_header_13.h  cache_header_14.h  cache_header_17.h  cache_header_18.h  cache_header_21.h  cache_header_24.h  cache_header_3.h  cache_header_6.h  cache_header_7.h  cache_impl_10.cpp  cache_impl_12.cpp  cache_impl_14.cpp  cache_impl_15.cpp  cache_impl_16.cpp  cache_impl_19.cpp  cache_impl_2.cpp  cache_impl_20.cpp  cache_impl_21.cpp  cache_impl_22.cpp  cache_impl_25.cpp  cache_interface_1.h  cache_interface_12.h  cache_interface_13.h  cache_interface_14.h  cache_interface_15.h  cache_interface_16.h  cache_interface_17.h  cache_interface_18.h  cache_interface_2.h  cache_interface_21.h  cache_interface_23.h  cache_interface_24.h  cache_interface_6.h  cache_utility_1.h  cache_utility_14.h  cache_utility_15.h  cache_utility_16.h  cache_utility_21.h  cache_utility_25.h  (+3 more)
bootloader/config/: config_header_16.h  config_header_17.h  config_header_2.h  config_header_25.h  config_header_3.h  config_header_5.h  config_header_8.h  config_impl_10.cpp  config_impl_11.cpp  config_impl_12.cpp  config_impl_13.cpp  config_impl_15.cpp  config_impl_18.cpp  config_impl_25.cpp  config_impl_7.cpp  config_impl_8.cpp  config_impl_9.cpp  config_interface_14.h  config_interface_17.h  config_interface_23.h  config_interface_25.h  config_interface_6.h  config_interface_8.h  config_utility_1.h  config_utility_12.h  config_utility_14.h  config_utility_15.h  config_utility_18.h  config_utility_19.h  config_utility_22.h  config_utility_23.h  config_utility_8.h  config_utility_9.h
bootloader/documentation/: documentation_header_10.h  documentation_header_13.h  documentation_header_18.h  documentation_header_20.h  documentation_header_24.h  documentation_header_4.h  documentation_header_5.h  documentation_header_6.h  documentation_impl_10.cpp  documentation_impl_13.cpp  documentation_impl_14.cpp  documentation_impl_16.cpp  documentation_impl_18.cpp  documentation_impl_22.cpp  documentation_impl_25.cpp  documentation_impl_6.cpp  documentation_impl_8.cpp  documentation_impl_9.cpp  documentation_interface_12.h  documentation_interface_14.h  documentation_interface_22.h  documentation_interface_23.h  documentation_interface_5.h  documentation_interface_6.h  documentation_interface_7.h  documentation_interface_8.h  documentation_utility_1.h  documentation_utility_13.h  documentation_utility_14.h  documentation_utility_16.h  documentation_utility_22.h  documentation_utility_23.h  documentation_utility_3.h  documentation_utility_6.h
bootloader/drivers/: drivers_header_13.h  drivers_header_20.h  drivers_header_24.h  drivers_header_5.h  drivers_header_7.h  drivers_header_8.h  drivers_impl_10.cpp  drivers_impl_11.cpp  drivers_impl_12.cpp  drivers_impl_19.cpp  drivers_impl_20.cpp  drivers_impl_22.cpp  drivers_impl_23.cpp  drivers_impl_5.cpp  drivers_impl_9.cpp  drivers_interface_13.h  drivers_interface_16.h  drivers_interface_17.h  drivers_interface_18.h  drivers_interface_20.h  drivers_interface_21.h  drivers_interface_23.h  drivers_interface_24.h  drivers_interface_6.h  drivers_utility_1.h  drivers_utility_11.h  drivers_utility_15.h  drivers_utility_18.h  drivers_utility_6.h  drivers_utility_7.h
bootloader/examples/: examples_header_11.h  examples_header_13.h  examples_header_18.h  examples_header_21.h  examples_header_3.h  examples_header_8.h  examples_impl_1.cpp  examples_impl_10.cpp  examples_impl_13.cpp  examples_impl_15.cpp  examples_impl_16.cpp  examples_impl_17.cpp  examples_impl_23.cpp  examples_impl_24.cpp  examples_impl_25.cpp  examples_impl_3.cpp  examples_impl_4.cpp  examples_interface_10.h  examples_interface_12.h  examples_interface_17.h  examples_interface_21.h  examples_interface_24.h  examples_interface_3.h  examples_interface_4.h  examples_interface_9.h  examples_utility_11.h  examples_utility_15.h  examples_utility_16.h  examples_utility_17.h  examples_utility_2.h  examples_utility_21.h  examples_utility_5.h
bootloader/logs/: logs_header_14.h  logs_header_15.h  logs_header_17.h  logs_header_20.h  logs_header_4.h  logs_header_7.h  logs_header_8.h  logs_header_9.h  logs_impl_17.cpp  logs_impl_19.cpp  (+23 more)
comprehensive_os_research/: README.md
config/: .env
data/: agentic_os.db
docs/: file_structure_summary.md
kernel/: main.c  main.cpp
nexus_os/: GENERATION_SUMMARY.json  README.md  SELF_CORRECTION_GUIDE.md  SELF_CORRECTION_SUMMARY.md  comprehensive_demo.py  demo_enhanced_features.py  demo_self_correction.py  install.py  requirements.txt  simple_demo.py  simple_demo_report.json
system/: universal_interface_engine.cpp
(+15842 files in other folders)
